[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[coverage.run]
branch = true
source = ["pymolfold"]

[coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[project]
name = "pymolfold"
version = "0.2.6"
description = "Protein structure prediction in PyMOL"
readme = "README.md"
authors = [
    { name = "Jinyuan Sun", email = "jinyuansun98@gmail.com" },
    { name = "Yifan Deng", email = "dengyifan15@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["protein", "structure prediction", "PyMOL", "bioinformatics", "protein folding"]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "numpy>=1.19.0",
    "httpx>=0.24.0",
    "fastapi>=0.68.0",
    "matplotlib>=3.3.0",
    "biopython>=1.79",
    "streamlit==1.49.1",
    "flask==3.1.0",
    "rdkit==2025.3.6",
    "uvicorn==0.22.0",
    "esm==3.2.1",
    "torch>=2.0.0",
    "shadowpxmeter==0.0.3",
    "seaborn==0.13.2"
]

[project.urls]
Homepage = "https://github.com/ivandon15/PymolFold"
Documentation = "https://github.com/ivandon15/PymolFold#readme"
Repository = "https://github.com/ivandon15/PymolFold.git"
Issues = "https://github.com/ivandon15/PymolFold/issues"

[project.entry-points."pymol.plugins"]
pymolfold = "pymolfold.plugin:__init_plugin__"

[tool.setuptools]
packages = ["pymolfold"]
package-dir = {"pymolfold" = "pymolfold"}